Dark mode fixes for links
Fix links in dark mode

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -330,7 +330,14 @@ section#app-header {
 				}
 				&:focus {
 					background:	$yellow;
+					outline:		2px solid $yellow;
+					
+					@include dark-mode {
+						color: 	$black;
+					}
 				}
+				
+				
 			}
 		}
 		
